minor modifications in client scripts

--- a/CinemaBookingClient/Views/CinemaHall/CinemaHallPlan.cshtml
+++ b/CinemaBookingClient/Views/CinemaHall/CinemaHallPlan.cshtml
@@ -26,13 +26,102 @@
         position: relative;
         height: @(Model.CinemaHallBox.Height)px;
         width: @(Model.CinemaHallBox.Width )px;
-        
+
         margin: 0 auto
     }
-
-
-
 </style>
+<script>
+    $(document).ready(
+        function () {
+            //var z;
+            var seats = [];
+            $(".crossword-row > div").click(function () {
+                if ($(this).find("div").hasClass("seat")) { 
+                    var seat = $(this).find("div");
+                    var seatPos = $(seat).attr("seatPosition");
+                    var seatId = $(seat).attr("id");
+                    var objPos = seatPos.split('-');
+                    var objSeat = {
+                        "RowIndex": objPos[0],
+                        "ColumnIndex": objPos[1],
+                        "AreaNumber": objPos[2]
+                    };
+
+                    if ($(seat).hasClass("booked")) {
+                        $(seat).removeClass("booked").css("background", "yellow");
+                        //TODO delete seat from seats
+                        //seats = $.grep(seats, function (value) {
+                        //    return value != objSeat.value;
+                        //});
+                        alert(seats.length);
+                    }
+                    else {
+                        $(seat).css("background", "#000")
+                            .addClass("booked");
+
+                        //add objSeat to seats
+                        seats.push(objSeat);
+
+                        alert(seats.length);
+
+
+                        //for (var i = 0; i < seats.length; i++)
+                        //{
+                        //    var pos = seats[i].split('-');
+                        //    //var pos = position.split('-');
+                        //    var numTicketText = "Row: " + ++pos[0]
+                        //        + " Place:" + pos[1]
+                        //        + " Area:" + pos[2];
+
+                        //    //var $newdiv1 = $("<div></div>"),
+                        //    //    newdiv2 = document.createElement("div"),
+                        //    //    existingdiv1 = document.getElementById(seatId - 1);
+
+                        //    //$("body").append($newdiv1, [newdiv2, existingdiv1]);
+
+                        //    //$("#ordered_tickets").append("div")
+                        //    //$("#numver_ticket").text(numTicketText);
+                        //    //var priceTicketText;
+                        //    //if (numTicketText[3] == 1)
+                        //    //    priceTicketText = 70;
+                        //    //else
+                        //    //    priceTicketText = 100;
+                        //    //$("#price_ticket").text(priceTicketText + " UAN");
+                        //}
+
+                    }
+                }
+            });
+
+            //TODO change color on hover event
+            //$(".crossword-row > div").hover(function () {
+            //    if ($(this).find("div").hasClass("seat")) {
+            //        //$(this).attr("title");
+            //    }
+            //});
+
+            $("#btnOrderTicket").on("click", function (event) {
+                var jsonStr = {
+                    "Seat": seats
+                };
+                alert(JSON.stringify(jsonStr));
+                $.ajax({
+                    type: 'POST',
+                    dataType: 'json',
+                    url: '/CinemaHall/Post',
+                    data: JSON.stringify(jsonStr),
+                    contentType: 'application/json',
+                    success: function (data) {
+                        alert(data);
+                    }
+                });
+            });
+
+        }
+    )
+</script>
+
+
 <div style="margin: 30px auto;">
     <div id="big-container" class="big-container">
         <div>
@@ -55,34 +144,42 @@
 
                     @foreach (var row in area.Rows)
                     {
-                        <div style="
-                                     position: absolute;
+                    <div class="crossword-row" row="@row.PhysicalName"
+                         style=" position: absolute;
                                      left: @(row.RowPos.Left)px;
                                      top: @(row.RowPos.Top)px;
                                      height: @(area.RowBox.Height)px;
                                      width: @(area.RowBox.Width)px;
                                      background: magenta;
                                      border: 0px solid #0FF;">
-                            @foreach (var seat in row.Seats)
-                            {
-                            <div style="
-                                     position: absolute;
-                                     left: @(seat.SeatPos.Left)px;
-                                     top: @(seat.SeatPos.Top)px;
-                                     height: @(area.SeatBox.Height)px;
-                                     width: @(area.SeatBox.Width)px;
-                                     background: yellow;
-                                     border: 1px solid #F0F;">
+                        @foreach (var seat in row.Seats)
+    {
+                        <div class="conteiner_seat" id="@seat.Id" style="font-size: 8px; margin: 1px;">
+                            <div class="seat"
+                                 seatPosition="@(seat.Position.RowIndex)-@(seat.Position.ColumnIndex)-@(seat.Position.AreaNumber)"
+                                 title="@(seat.Id)"
+                                 style=" position: absolute;
+                                             left: @(seat.SeatPos.Left)px;
+                                             top: @(seat.SeatPos.Top)px;
+                                             height: @(area.SeatBox.Height)px;
+                                             width: @(area.SeatBox.Width)px;
+                                             background: yellow;
+                                             border: 1px solid #F0F;">
                                 @*@(seat.Position.ColumnIndex+1)*@
                             </div>
-                            }
                         </div>
-                    }
+                        }
+                    </div>
+}
 
-                </div>
+                    </div>
             }
             @*</div>*@
         </div>
     </div>
 </div>
-<button class="btn btn-success">Order</button> 
+
+@*info panel*@
+<div id="ordered_tickets"></div>
+
+<button class="btn btn-success" id="btnOrderTicket">Order Tickets</button>
