--- a/CinemaBookingClient/Views/Home/About.cshtml
+++ b/CinemaBookingClient/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Demo project for Cinema Booking by Anna Iakymenko </p>
