--- a/CinemaBookingClient/Views/Shared/_Layout.cshtml
+++ b/CinemaBookingClient/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>*@
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="CinemaHall" asp-action="UserOrders">Orders</a></li>
                     <li><a asp-area="" asp-controller="CinemaHall" asp-action="CinemaHallPlan">Booking</a></li>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                 </ul>
